<resources>
    <string name="app_name">PassBeat</string>
    
    <!-- Login Fragment -->
    <string name="login_instruction">Tap your secret rhythm to log in</string>
    <string name="forgotten_rhythm"><u>Forgotten your rhythm?</u></string>

    <!-- Content Descriptions -->
    <string name="sound_wave">Sound wave</string>
    <string name="touch_icon">Touch icon</string>
    <string name="about_icon">About this app</string>
    <string name="mute_icon">Mute or unmute</string>

    <!-- Setup Fragment -->
    <string name="instructionSetup">Tap the button to set your secret rhythm.</string>
    <string name="instructionSetup2">Repeat your rhythm five times.</string>

    <!-- Result Fragment -->
    <string name="welcome_to_passbeat">Welcome to the PassBeat-player</string>
    <string name="enjoy">Enjoy some <u>Rhythm</u> Of The Night by <u>Corona</u></string>

    <!-- About Fragment -->
    <string name="aboutTitle">About PassBeat</string>
    <string name="aboutSection1Title">What is PassBeat?</string>
    <string name="aboutSection1Text">PassBeat is a research tool to gather data on the retentiveness of rhythm-based passwords in comparison to text-based passwords. In other words, it helps researchers to find out whether rhythm-based passwords are easier to remember than conventional passwords.</string>
    <string name="aboutSection2Title">Why should I use PassBeat?</string>
    <string name="aboutSection2Text">By using PassBeat you participate in a field study and help researchers collecting data which will be used to gain new knowledge on password retentiveness. Without your help, this study would not be possible, so, thank you!</string>
    <string name="aboutSection3Title">What data does PassBeat gather?</string>
    <string name="aboutSection3Text">PassBeat will only transmit your login success ratio and the time of your login as well as the strength of your password. Your password is stored locally on the device and will not be transmitted.</string>
    <string name="aboutMoreInfo">For more information check out the <a href="https://oskgro.github.io/">PassBeat website</a>.</string> <!-- TODO make link clickable -->

</resources>