<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.oskgro.passbeat.viewModel.SetupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.35"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/instructionSetup"
            android:textColor="#000000"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/yellow_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/counter"
            android:background="@drawable/yellow_button"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:elevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/ic_sound_wave"
                android:layout_margin="36dp"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="@string/sound_wave" />

        </LinearLayout>
        
        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/yellow_button"
            app:layout_constraintBottom_toTopOf="@id/undo_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{viewmodel.currentlyEncoding + ` / 5`}"
            tools:text="3 / 5"
            android:textSize="24sp"
            android:textColor="@color/textColor" />

        <ImageView
            android:id="@+id/undo_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_undo"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewmodel.undoButtonClicked()}"
            app:layout_constraintTop_toBottomOf="@id/counter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/sound_wave" />

        <TextView
            android:id="@+id/instruction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nunito"
            android:text="@string/instructionSetup2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_text"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>